[package]
name = "grunner"
version = "0.1.0"
authors = ["AberrantWolf <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/hecrj/iced" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
subprocess = "0.2"
tokio = "0.3"
