[package]
name = "vcr"
version = "0.2.0"
authors = ["AberrantWolf <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["tokio"] }
iced_futures = "0.3"
iced_native = "0.4"
rodio = "0.14.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
structopt = "0.3"
subprocess = "0.2"
tokio = { version = "1", features = ["full"] }
